# wagtail-start

./: .pre-commit-config.yaml  Makefile  README.md  draw.excalidraw  pyproject.toml  setup.cfg
cls/: releases.py
files/: base.html  base.py  readme  urls.py
src/: start.py
start/: cli.py  functions.py  managers.py  managers_test.py
start/generators/: backend.py  frontend.py  installer.py  installer_test.py  readme.py  settings.py
start/generators/files/: README.md  README_fe.md  home_page.html  index.scss  rollup.config.js  sass.js  svgo.config.mjs
start/processors/: cls.py  cls_test.py  movers.py  readme.py  settings.py  welcome_page.py
