[tool.poetry]
name = "wagtail-start"
version = "0.1.0"
description = "A cli to start a new Wagtail website"
authors = ["Nick Moreton <nickmoreton@me.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "start" },
]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^5.1.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new = "start.cli:new"
