[tool.poetry]
name = "wagtail-start"
version = "0.1.0"
description = "A cli to start a new Wagtail website"
authors = ["Nick Moreton <nickmoreton@me.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "start" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new = "start.cli:new"
